@@ -331,17 +331,6 @@ void *vim_findfile_init(char *path, char *filename, size_t filenamelen, char *st
     ff_expand_buffer.size = strlen(ff_expand_buffer.data);
 
     search_ctx->ffsc_start_dir = copy_string(ff_expand_buffer, NULL);
-
-#ifdef BACKSLASH_IN_FILENAME
-    // A path that starts with "/dir" is relative to the drive, not to the
-    // directory (but not for "//machine/dir").  Only use the drive name.
-    if ((*path == '/' || *path == '\\')
-        && path[1] != path[0]
-        && search_ctx->ffsc_start_dir.data[1] == ':') {
-      search_ctx->ffsc_start_dir.data[2] = NUL;
-      search_ctx->ffsc_start_dir.size = 2;
-    }
-#endif
   }
 
   // If stopdirs are given, split them into an array of pointers.
